--- a/media_mix_modelling_ver2.ipynb
+++ b/media_mix_modelling_ver2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7fd1be28",
+   "id": "104dc71d",
    "metadata": {},
    "source": [
     "# Media Mix Modeling \n",
@@ -40,7 +40,7 @@
     "\n",
     "## Dataset\n",
     "\n",
-    "The dataset used in this project is a synthetic dataset sourced from Kaggle. It has around 4 years of weekly data on sales and spends across TV, radio and newspaper. \n",
+    "The dataset used in this project is a synthetic dataset that has around 4 years of weekly data on sales and spends across TV, radio and newspaper. \n",
     "\n",
     "\n"
    ]
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c7bb907",
+   "id": "c9ae445e",
    "metadata": {},
    "source": [
     "### Loading and inspecting the data"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a7ab9f2f",
+   "id": "b0160e0d",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20703640",
+   "id": "9a657ae6",
    "metadata": {},
    "source": [
     "**Observations**\n",
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46ec43fa",
+   "id": "7756da7e",
    "metadata": {},
    "source": [
     "The above shows that sales has a stronger relation with TV spends, with a correlation coefficient of 0.68. Radio and newspaper have a lower correlation at 0.47 and 0.36 respectively. Let's do some scatter plots to visualize sales with each of the media spends.\n"
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba76362b",
+   "id": "0bc639db",
    "metadata": {},
    "source": [
     "We see that the VIF scores are all below 10, indicating that the multicolinearity between different media spends is not significant. \n",
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76c86173",
+   "id": "d656a05c",
    "metadata": {},
    "source": [
     "\n",
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51335ae9",
+   "id": "ad3510a7",
    "metadata": {},
    "source": [
     "**Transforming the Media Spends and creating the Model**<br>\n",
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4cf4800",
+   "id": "5c3658e0",
    "metadata": {},
    "source": [
     "The $r^{2}$ score for the model is **0.73**. This is a decent start, as we have not optimized the parameters yet. \n",
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "632566ac",
+   "id": "67a1a37d",
    "metadata": {},
    "source": [
     "After optimizing the hyperparameters, we get a mean $r^{2}$ score of **0.916**. This is a significant improvement over the baseline model. \n",
@@ -1023,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a2ab2e95",
+   "id": "c2ded668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a452fc",
+   "id": "42e1f73f",
    "metadata": {},
    "source": [
     "## Visualizing the Carryover and Saturation effect for each media"
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "363658cb",
+   "id": "103cae97",
    "metadata": {},
    "source": [
     "**Observations on carryover effect**<br>\n",
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05f5f090",
+   "id": "cce2f858",
    "metadata": {},
    "source": [
     "**Observations on saturation effect**<br>\n",
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ea090ce",
+   "id": "6df4a0ef",
    "metadata": {},
    "source": [
     "# Visualizing Prediction vs Actual Sales\n",
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95510514",
+   "id": "430d8f6d",
    "metadata": {},
    "source": [
     "We see in the above chart that the predictions are pretty close to the actual sales. So the model works.\n",
@@ -1251,7 +1251,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "613123f6",
+   "id": "c325057f",
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b63f78b",
+   "id": "6cda4bec",
    "metadata": {},
    "source": [
     "# Conclusion\n",
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87374e36",
+   "id": "d18f07ef",
    "metadata": {},
    "outputs": [],
    "source": []
